# aws-bootstrap-g4dn

./: .envrc.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish-to-pypi.yml
aws-bootstrap-skill/: README.md
aws-bootstrap-skill/.claude-plugin/: plugin.json
aws-bootstrap-skill/skills/aws-bootstrap/: SKILL.md
aws-bootstrap-skill/skills/aws-bootstrap/references/: commands.md
aws_bootstrap/: cli.py  cluster.py  config.py  constants.py  ec2.py  gpu.py  output.py  quota.py  remote_setup.sh  retry.py  ssh.py
aws_bootstrap/resources/: cluster_canary.py  gpu_benchmark.py  gpu_smoke_test.ipynb  launch.json  remote_setup.sh  requirements.txt  tasks.json  triton_vector_add.py
aws_bootstrap/tests/: conftest.py  test_cli.py  test_cli_cluster.py  test_cli_regions.py  test_cluster.py  test_config.py  test_constants.py  test_ebs.py  test_ec2.py  test_gpu.py  test_output.py  test_quota.py  test_retry.py  test_ssh_config.py  test_ssh_ebs.py  test_ssh_exec.py  test_ssh_gpu.py  test_ssh_keypair.py
docs/: capacity-and-retry.md  multi-node-training.md  nsight-remote-profiling.md
docs/superpowers/specs/: 2026-05-20-quota-list-regions-design.md  2026-05-20-status-multi-region-design.md
examples/cluster/: README.md  prepare_data.sh  train_ddp.py
