[project]
name = "aws-bootstrap-g4dn"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.35",
    "click>=8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aws_bootstrap"]

[project.scripts]
aws-bootstrap = "aws_bootstrap.cli:main"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Pylint (Convention)
    "PLC",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["aws_bootstrap"]
lines-after-imports = 2
no-lines-before = ["standard-library"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
